--- a/index.html
+++ b/index.html
@@ -5,10 +5,106 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="bootstrap-3.3.7-dist\css\bootstrap.min.css">
+    <link rel="stylesheet" href="css\bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css\estilos.css">
     <title>Blog de Música</title>
   </head>
   <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md3 col-lg-3">
+          <img src="img/logo.png" alt="">
+        </div>
+        <div class="hidden-xs hidden-sm col-md6 col-lg-6"></div>
+        <div class="hidden-xs hidden-sm col-md3 col-lg-3">
+          <nav class="navbar navbar-light">
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="#" title="Twitter" rel="nofollow" target="_blank">
+                <i class="fa fa-twitter-square fa-lg twitter-blue"></i>
+                  </a>
+              </li>
+              <li><a href="#" title="Facebook" rel="nofollow" target="_blank">
+                <i class="fa fa-facebook-square fa-lg facebook-blue"></i>
+                </a>
+              </li>
+              <li><a href="#" title="LinkedIn" rel="nofollow" target="_blank">
+                <i class="fa fa-linkedin-square fa-lg linkedin-blue"></i>
+                  </a>
+              </li>
+              <li><a href="#" title="LinkedIn" rel="nofollow" target="_blank">
+                <i class="fa fa-youtube-square fa-lg youtube-blue"></i>
+                  </a>
+              </li>
+             </ul>
+         </nav>
+        </div>
+      </div>
+      <div class="row">
+        <nav class="navbar navbar-light nav-paginas">
+          <ul class="nav navbar-nav ">
+            <li class="linav"><a class="text-center" href="#">Inicio</a></li>
+            <li class="linav"><a class="text-center" href="#">Grupos</a></li>
+            <li class="linav"><a class="text-center" href="#">Artistas</a></li>
+            <li class="linav"><a class="text-center" href="#">Top 10</a></li>
+            <li class="linav"><a class="text-center" href="#">Letras</a></li>
+            <li class="linav"><a class="text-center" href="#">Acordes</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
 
+    <div class="container contenidos">
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 publicaciones">
+          <div class="row">
+            <div class="col-xs-12 col-xs-12 col-md-8 col-lg-8 texto">
+              texto1
+            </div>
+            <div class="col-xs-12 col-xs-12 col-md-4 col-lg-4 imagen">
+              imagen1
+            </div>
+            <div class="col-xs-12">
+              comentarios
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xs-12 col-xs-12 col-md-8 col-md-push-4 col-lg-8 col-lg-push-4 texto">
+              texto2
+            </div>
+            <div class="col-xs-12 col-xs-12 col-md-4 col-md-pull-8 col-lg-4 col-lg-pull-8 imagen">
+              imagen2
+            </div>
+            <div class="col-xs-12">
+              comentarios
+            </div>
+          </div>
+        </div>
+        <div class="hidden-xs hidden-sm col-md-3 col-lg-3">
+          <form class="navbar-form" role="search">
+            <div class="input-group">
+              <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
+              <div class="input-group-btn">
+                <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+              </div>
+            </div>
+          </form>
+          <ul class="list-group">
+            <li class="list-group-item">Nam condimentum</li>
+            <li class="list-group-item">Morbi facilisis</li>
+            <li class="list-group-item">Donec lobortis</li>
+            <li class="list-group-item">sit amet</li>
+            <li class="list-group-item">Quisque vel</li>
+            <li class="list-group-item">Non tortor</li>
+            <li class="list-group-item">Proin sit</li>
+            <li class="list-group-item">Aliquam sodales</li>
+            <li class="list-group-item">Phasellus sit</li>
+            <li class="list-group-item">Mauris quis</li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
