--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css\bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css\estilos.css">
+    <link rel="stylesheet" href="css/estilos.css">
     <title>Blog de Música</title>
   </head>
   <body>
@@ -23,19 +23,19 @@
           <nav class="navbar navbar-light">
             <ul class="nav navbar-nav navbar-right">
               <li><a href="#" title="Twitter" rel="nofollow" target="_blank">
-                <i class="fa fa-twitter-square fa-lg twitter-blue"></i>
+                <i class="fa fa-twitter-square fa-2x twitter-blue"></i>
                   </a>
               </li>
               <li><a href="#" title="Facebook" rel="nofollow" target="_blank">
-                <i class="fa fa-facebook-square fa-lg facebook-blue"></i>
+                <i class="fa fa-facebook-square fa-2x facebook-blue"></i>
                 </a>
               </li>
               <li><a href="#" title="LinkedIn" rel="nofollow" target="_blank">
-                <i class="fa fa-linkedin-square fa-lg linkedin-blue"></i>
+                <i class="fa fa-linkedin-square fa-2x linkedin-blue"></i>
                   </a>
               </li>
               <li><a href="#" title="LinkedIn" rel="nofollow" target="_blank">
-                <i class="fa fa-youtube-square fa-lg youtube-blue"></i>
+                <i class="fa fa-youtube-square fa-2x youtube-blue"></i>
                   </a>
               </li>
              </ul>
@@ -61,31 +61,50 @@
         <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 publicaciones">
           <div class="row">
             <div class="col-xs-12 col-xs-12 col-md-8 col-lg-8 texto">
-              texto1
+              <h3>Fallece Ikutaro Kakehashi, pionero de los instrumentos de música electrónica</h3>
+              <p class="text-justify">Kakehashi recibió en 2013 un Grammy Award por su contribución a la industria musical con la creación del <strong>sistema MIDI</strong> (interfaz digital para los instrumentos de música).</p>
+              <p class="text-justify"><strong>Ikutaro Kakehashi</strong>, fundador del fabricante de instrumentos de música electrónica <strong>Roland</strong>, clave en el pop de los años 1980, falleció el sábado a los 87 años de edad, informó este lunes un portavoz de compañía actual, ATV. </p>
+              <p>Marc Almond, uno de los cantantes del grupo británico Soft Cell, exponente del pop sintetizado, rindió homenaje en Twitter a un <strong>"hombre que cambió la música"</strong>. </p>
             </div>
             <div class="col-xs-12 col-xs-12 col-md-4 col-lg-4 imagen">
-              imagen1
+              <img src="img/electronica.jpg" class="imagenblog" alt="">
             </div>
             <div class="col-xs-12">
-              comentarios
+              <div class="row">
+                <div class="col-xs-2">
+                  <i class="fa fa-comments fa-4x pull-right comment-icon" aria-hidden="true"></i>
+                </div>
+                <div class="col-xs-10">
+                  <textarea class="form-control" rows="2" id="comment"placeholder="Comentarios..."></textarea>
+                </div>
+              </div>
             </div>
           </div>
           <div class="row">
             <div class="col-xs-12 col-xs-12 col-md-8 col-md-push-4 col-lg-8 col-lg-push-4 texto">
-              texto2
+              <h3>Álbum en solitario de Lemmy Kilmister podría publicarse este año</h3>
+              <p class="text-justify">Más de un año después de que <strong>Lemmy Kilmister</strong> falleciera a consecuencia de un cáncer de próstata, que le había sido diagnosticado apenas unos días antes de su muerte, el también músico Jim Voxx ha confirmado que el álbum en solitario en que estaba trabajando el rockero -bajo su producción- podría salir a la venta a finales de año.</p>
+              <p class="text-justify">"<i>Estamos dando los últimos retoques al disco de Lemmy. Todavía no sé cuándo saldrá a la venta porque el control de su legado está en manos de Motörhead y todo ello ha llevado un tiempo</i>. <strong>Lemmy dejó muchas cosas... Hay tantas grabaciones suyas que lo complicado ha sido decidir cómo proceder</strong>. No hay prisa por sacar el disco, pero imagino que será a finales de este año", ha confesado Voxx, conocido por ser el guitarrista de la banda Skew Siskin, al portal de noticias Metal Talk.</p>
             </div>
             <div class="col-xs-12 col-xs-12 col-md-4 col-md-pull-8 col-lg-4 col-lg-pull-8 imagen">
-              imagen2
+              <img src="img/lemmy.jpg" class="imagenblog" alt="">
             </div>
             <div class="col-xs-12">
-              comentarios
+              <div class="row">
+                <div class="col-xs-2">
+                  <i class="fa fa-comments fa-4x pull-right comment-icon" aria-hidden="true"></i>
+                </div>
+                <div class="col-xs-10">
+                  <textarea class="form-control" rows="2" id="comment" placeholder="Comentarios..."></textarea>
+                </div>
+              </div>
             </div>
           </div>
         </div>
         <div class="hidden-xs hidden-sm col-md-3 col-lg-3">
-          <form class="navbar-form" role="search">
+          <form class="navbar-form" role="Buscar">
             <div class="input-group">
-              <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
+              <input type="text" class="form-control" placeholder="Buscar" name="srch-term" id="srch-term">
               <div class="input-group-btn">
                 <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
               </div>
